[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="ScorePanel" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="ScorePanel"]
layout_mode = 2
text = "RED: 0   BLUE: 0"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 55.0
offset_right = 40.0
offset_bottom = 78.0
grow_horizontal = 2
text = "8:00"
horizontal_alignment = 1

[node name="HealthPanel" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0

[node name="HealthLabel" type="Label" parent="HealthPanel"]
layout_mode = 2
text = "Health: 100/100"

[node name="WeaponPanel" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="WeaponLabel" type="Label" parent="WeaponPanel"]
layout_mode = 2
text = "AR: 32/90"
horizontal_alignment = 2

[node name="KillFeed" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 350.0
grow_horizontal = 0

[node name="RadarPanel" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -180.0
offset_right = 140.0
offset_bottom = -60.0
grow_vertical = 0

[node name="RadarLabel" type="Label" parent="RadarPanel"]
layout_mode = 2
text = "RADAR"
horizontal_alignment = 1
